--- a/src/components/CopyEmailButton.module.css
+++ b/src/components/CopyEmailButton.module.css
@@ -27,9 +27,9 @@
   border-radius: 0.375em;
   justify-content: center;
   align-items: center;
-  width: 2.5em;
-  height: 2.5em;
-  padding: 0.5em;
+  width: 1.75em;
+  height: 1.75em;
+  padding: 0.35em;
   transition: background-color 0.2s;
   display: flex;
   flex-shrink: 0;
